# sentinel

./: .dockerignore  .env  .env.bak  .env.example  .env.extra  .gitignore  BLUEPRINT_SCA_V1.md  Dockerfile  Dockerfile.base  Dockerfile.executor  HANDOFF.md  LEGAL.md  LOCKDOWN_VPS_PROD_2026.md  PROJECT_STATE.md  README.md  SECURITY.md  Telegram  agent_identity.py  agent_registry.py  agents.json  approver_bot.py  blueprint.md  bot.py  capabilities.json  compose.yml.bad  docker-compose.override.yml.disabled  docker-compose.v1.yml.disabled  docker-compose.validator.yml  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.broken.1771719697  executor_worker.py  identity_redis.py  install-validator.sh  maintenance_worker.py  openapi.json  ops_digest.py  queue_redis.py  reputation.json  reputation_redis.py  (+30 more)
.venv-sdk/: pyvenv.cfg
_backup/: rejected_backup.json
approved/: 3593265c-30d9-4e62-99e2-39498b386958.json  39e4a6f8-cb99-48b5-9f32-dcafc790879a.json  6872255c-8102-4b26-ae69-f62fb1d15953.json  6b2d7e42-ff36-424a-bf9a-2b55d96949a1.json  841ad4a9-962f-4509-8356-16eb24c6ddee.json  89dc7c83-e9b9-4126-9e8c-e2292d0d68a9.json  a58b2f6c-7b25-4efd-9e90-7217890deab6.json
data/: reputation.json
dev/: dashboard_patch.py  diag_check.py  ed25519_test_agent.json  reputation.json  run_local.sh
docs/: ROADMAP.md  architecture.md  operator-runbook.md  policy.v1.md  policy.validator.md  pricing.md  protocol.md  signing-guide.md  validator-install.md
sdk/: README.md  pyproject.toml
sdk/examples/: protected_read_url.py
sdk/sentinel_agent.egg-info/: PKG-INFO  SOURCES.txt
(+82 files in other folders)
